lifeguard_desktop.css
#class-result div.ui-block-a,
#class-result div.ui-block-b,
#class-result div.ui-block-c,
#class-result div.ui-block-d,
#class-result div.ui-block-e{
	z-index:0 !important;
	-webkit-transform: translate3d(0,0,0);
	transform: translate3d(0,0,0);

-webkit-backface-visibility: hidden;
-moz-backface-visibility: hidden;
-ms-backface-visibility: hidden;
-o-backface-visibility: hidden;
backface-visibility: hidden;
}


.ui-btn {
	text-shadow:none !important;
}

.ui-btn.ui-state-disabled {
	border-color: #999999 !important;
	color: #999999 !important;
    opacity:1;
    cursor: default !important;
    pointer-events: none;
}



.big-box:before {
	width: 8.81em;
	height: 8.81em;
	-webkit-transform: translate(-50%,0%) scale(0.3,0.7071) rotate(45deg);
	transform: translate(-50%,0%) scale(0.3,0.7071) rotate(45deg);

	border:2px solid #00679C;
	position: absolute;
	left: 100%;
	content: "";
	z-index:-1;
	border-radius:0px;
	border-top-right-radius: 5px;
    background-color: #ffffff;
		/*fake transform*/

}

.box {


	/*correct the overflow to make gradients visible, then remove the right round border from the button, remove the right border*/
	overflow:visible;
	border-bottom-right-radius: 0px !important;
    border-top-right-radius: 0px !important;
	//border-right: 0px solid red !important;
	//border-right: 1px solid #00679C;
	margin-right: 2.3125em !important;
    margin-left: .3125em !important;

	text-shadow:none !important;
	border-right: 0px !important;
	//border-width: 1px;
    border-style: solid;
	border-top-left-radius: .3125em;
	border-bottom-left-radius: .3125em;
	background-color: #ffffff;
    border-color: #00679C;
    color: #00679C;
    text-shadow: 0 1px 0 #eeeeee;

	min-width:50px;

  color: #00679C;
  //margin-bottom: 20px;
  padding: 10px;
  position: relative;
}

.small-box:before{
	border:1.5px solid #00679C;
	width: 4.17em;
	height: 4.17em;
  position: absolute;
  left: 100%;
  content: "";
  z-index:-1;

  -webkit-transform: translate(-50%,0%) scale(0.5,0.7071) rotate(45deg);
  transform: translate(-50%,0%) scale(0.5,0.7071) rotate(45deg);
  border-radius:0px;
  border-top-right-radius: 5px;
      background-color: #ffffff;

}

.box:before {
	box-sizing: border-box;
	top: -1px;
}

.box:hover {
background-color: #006679C;
    border-color: #006679C;
    color: #ffffff;
}
.box:hover:before {
  background-color: #00679C;
    border-color: #00679C;
    color: #ffffff;
}


.box.ui-state-disabled:hover {
	background-color: #ffffff;
    border-color: #999999 !important;
    color: #999999 !important;
    opacity: 1;
    cursor: default !important;
    pointer-events: none;
}


.box:active:before {
   background-color: #00679C;
    border-color: #00679C;
    color: #ffffff;
}


.box.ui-state-disabled {
    border-color: #999999 !important;
    color: #999999 !important;
    opacity: 1;
    cursor: default !important;
    pointer-events: none;
}


.box.ui-state-disabled:before {
   background-color: #ffffff;
    border-color: #999999;
    color: #ffffff;

}

.arrow-right {
	width: 0;
	height: 0;
	border-top: 60px solid transparent;
	border-bottom: 60px solid transparent;

	border-left: 60px solid green;
}

.round_buttons {
    width: 3em !important;
    height: 3em !important;
	padding: 0.2em !important;
    border-radius: 50% !important;
	
	text-shadow:none !important;
	font-size:14px;
	font-family:'Univers LT W01 65 Bold', 'Univers LT Std';
	border-width: 1px;
	border-style: solid;
	text-decoration: none;
	color: #00679C;
	background-color: #fff;

}
.progress div a.ui-btn{
	text-shadow:none;
}








.ui-btn.ui-state-disabled {
border-color: #999999 !important;
	color: #999999 !important;
    opacity:1;
    cursor: default !important;
    pointer-events: none;
}

.ui-btn {
    font-size: 14px;
    font-family: 'Univers LT W02 55 Roman', 'Univers LT Std';
}
@media only screen and (min-width: 35em) {
	.ui-btn {
		font-size: 10px;
		height:2.6em;
		font-family: 'Univers LT W02 55 Roman', 'Univers LT Std';

	}
}
@media only screen and (min-width: 65em) {
	.ui-btn {
		font-size: 14px;
		height:2.6em;
		font-family: 'Univers LT W02 55 Roman', 'Univers LT Std';

	}
	.ui-content {
		max-width:90em;
		align:center;
		 margin-left: auto ;
		margin-right: auto ;
	}
}



.ui-focus,
.ui-btn:focus {
		-webkit-box-shadow: 0 0 0px #FF0000 !important/*{a-active-background-color}*/;
		-moz-box-shadow: 0 0 0px #FF0000 !important/*{a-active-background-color}*/;
		box-shadow: 0 0 0px #FF0000 !important/*{a-active-background-color}*/;
}

#desktoppage{
	position:absolute;
}

/**Levona Edit**/
.lifeguard_title_container{
	background-color:#EBF5F4;
	padding-top:2em;
	padding-bottom:2em;
	top:0px;
	right:0px;
	left:0px;
}

#lifeguard_title {
	font-family: 'Univers LT W01 65 Bold', 'Univers LT Std';
	/**font-weight: 700;**/
	font-style: normal;
	font-size: 40px;
	text-align: center;
	color:#00679C;
	padding:0 1em;
}

#lifeguard_subtitle {
	font-family: 'Univers LT W01 45 Light', 'Univers LT Std';
	/**font-weight: 400;**/
	font-style: normal;
	font-size: 18px;
	text-align: center;
	color:#E45125;
	padding-top:0.5em;
}

#lifeguard_body_text_title {
	/**color:#1AB394;**/
	color:#00679C;
	font-family: 'Univers LT W01 65 Bold', 'Univers LT Std';
	/**font-weight: 700;**/
	font-style: normal;
	font-size: 18px;
	-webkit-padding-start: 30px;
	
	/**levonaEdited**/
	padding:1.5em 0;
	text-align:center;
}

p.lifeguard_body_text {
	font-family: 'Univers LT W02 55 Roman', 'Univers LT Std';
	font-weight: 400;
	font-style: normal;
	font-size: 16px;
}

.do_not_display {
	visibility:hidden;
}

.available_after_age {
	width:40% !important;
	text-align: center;
	color: #999999;
	font-size: 14px;
	font-family: 'Univers LT W02 55 Roman', 'Univers LT Std';
}
.available_after_age p{
	margin-left:10px;
	margin-right:10px;
	color: #999999;
	border-bottom: 0.1em solid #999999;
	font-size: 14px;
	font-family: 'Univers LT W02 55 Roman', 'Univers LT Std';
}
.available_after_age_general p{
	margin-left:10px;
	margin-right:10px;
	text-align: center;
	color: #999999;
	border-bottom: 0.1em solid #999999;
	font-size: 14px;
	font-family: 'Univers LT W02 55 Roman', 'Univers LT Std';
}

#lifeguard_instructor_p3 .ui-block-a{
	width:25% !important;
}
#lifeguard_instructor_p3 .ui-block-b{
	width:50% !important;
}
#lifeguard_instructor_p3 .ui-block-c{
	width:25% !important;
}

.sorry  div.ui-block-a{
	width:25% !important;
}
.sorry  div.ui-block-b{
	width:50% !important;
}
.sorry  div.ui-block-c{
	width:25% !important;
}


.vertical-align {
	text-align: center;
    position: relative;
    top: 50%;

	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	-o-transform: translateY(-50%);
	transform: translateY(-50%);	
	
}

ol.progtrckr {
    margin: 0;
    padding: 0;
    list-style-type none;
}

ol.progtrckr li.progtrckr-done {
    color: black;
    border-bottom: 4px solid yellowgreen;
}

p.step {
	font-family: 'Univers LT W02 55 Roman', 'Univers LT Std';
	font-weight: 400;
	font-style: normal;
	font-size: 16px;

	color:#1AB394;
	display: inline;
	margin-top:0px;
	margin-bottom:0px;
}
p.afterstep {
	font-family: 'Univers LT W01 45 Light', 'Univers LT Std';
	font-weight: 400;
	font-style: normal;
	font-size: 16px;

	display: inline;
	margin-top:0px;
	margin-bottom:0px;
	
	color:#005570;
}

.line{
    width: 1px;
    height: 100px;
    background-color: black;
    position: absolute;
}
 #line1{
     top: 140px;
    left: 30px;
 }
.center-button{
  margin: 0 auto;
}
.table-btns {
  display: table;
  border-spacing: 0.4em;
  a {
    display: table-cell;
  }
}


.progress {
  list-style: none;
  font-size: 12pt;
 
/** andrei: dont like padding here **/ 
  /**levonaEdited**/
 /* //padding:0 12%;
	//max-width:60em;
	*/
 	align:center;
	margin-left: 2em;
	margin-right: 2em;
 
}
.progress li {
  border-left: 0.2em solid #00679C;
  padding: 0 0 0.1em 2em;
  position: relative;
  padding-bottom:2em;
}
.progress li::before {


}

.progress li:last-child {
  border-left: 0.2em solid transparent;
  padding: 0 0 0.1em 2em;
  position: relative;
  padding-bottom:0em;
}

.group1{
	position: relative;
  display: inline-block;
  margin-top: -2.5em;
  width:100%;	
}
.ui-btn .round_buttons:hover{
	color:red;
}

.stepHeader{
	font-family: 'Univers LT W01 45 Light', 'Univers LT Std';
	font-style:normal;
	font-size:12px;
	    margin-left: -1em;
	color:#e45125;
}

h3.stepsGeneral{
	
}

